Sonarbugs (#5595)